syntax = "proto3";

import "call-schedules-messages.proto";

package callSchedules.service;
option csharp_namespace = "CallSchedules.Service";

service GrpcCallScheduleService {
	rpc GetCallScheduleList(callSchedules.messages.GetCallScheduleListRequest)
		returns (callSchedules.messages.GetCallScheduleListResponse);
	rpc CreateCallScheduleListItem(callSchedules.messages.CreateCallScheduleListItemRequest)
		returns (callSchedules.messages.SucceedResponse);
	rpc UpdateCallScheduleListItem(callSchedules.messages.UpdateCallScheduleListItemRequest)
		returns (callSchedules.messages.SucceedResponse);
	rpc DeleteCallScheduleListItem(callSchedules.messages.DeleteCallScheduleListItemRequest)
		returns (callSchedules.messages.SucceedResponse);
}