syntax = "proto3";

import "google/protobuf/timestamp.proto";

package ChangesListService;
option csharp_namespace = "ChangesListService";

service GrpcSchedule {
    rpc GetChangesListById(GetChangesListByIdRequest) returns (GetChangesListByIdResponse);
    rpc GetChangesListItems(GetChangesListItemsRequest) returns (GetChangesListItemsResponse);
    rpc CreateChangesListFromFile(stream CreateChangesListFromFileRequest) returns (SucceedResponse);
    rpc CreateChangesList(CreateChangesListRequest) returns (SucceedResponse);
    rpc UpdateChangesList(UpdateChangesListRequest) returns (SucceedResponse);
    rpc DeleteChangesList(DeleteChangesListRequest) returns (SucceedResponse);
}

message ListItem {
    string changesListId = 1;
    int32 position = 2;
    string groupNumber = 3;
    string subjectName = 4;
    string teacherInitials = 5;
    string auditorium = 6;
}

message SucceedResponse {
    bool isSucceed = 1;
}

message GetChangesListByIdRequest {
    string listId = 1;
}

message GetChangesListByIdResponse {
    string educOrgId = 1;
    repeated ListItem listItems = 2;
    google.protobuf.Timestamp date = 3;
}

message GetChangesListItemsRequest {
    string listId = 1;
}

message GetChangesListItemsResponse {
    repeated ListItem listItems = 1;
}

message CreateChangesListRequest {
    google.protobuf.Timestamp date = 1;
    repeated ListItem listItems = 2;
}

message CreateChangesListFromFileRequest {
    google.protobuf.Timestamp date = 1;
    bytes fileData = 2;
}

message UpdateChangesListRequest {
    string listId = 1;
    google.protobuf.Timestamp date = 2;
    repeated ListItem listItems = 3;
}

message DeleteChangesListRequest {
    string listId = 1;
}
